Added multiple electricity companies to each city instead of 1 per
